# chat-with-multiple-pdfs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  main.py  playground.ipynb  pyproject.toml  readme.md
.streamlit/: config.toml
data/: Atlanta.txt  Beijing.txt  Berlin.txt  Boston.txt  Cairo.txt  Chicago.txt  Copenhagen.txt  Houston.txt  Karachi.txt  Lisbon.txt  London.txt  Moscow.txt  Munich.txt  Paris.txt  Seattle.txt  Shanghai.txt  Tokyo.txt  Toronto.txt
handlers/: st_handlers.py
helpers/: langchain_helpers.py  misc.py  pdf_helpers.py
utils/: files.py  splitters.py
