[tool.poetry]
name = "rag"
version = "0.1.0"
description = "A simple RAG application to chat across documnets"
authors = ["suyogdahal <suyogdahal46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
uvicorn = "^0.29.0"
langchain = "^0.2.0"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.8.0"
tiktoken = "^0.7.0"
openai = "^1.30.1"
langchain-community = "^0.2.0"
loguru = "^0.7.2"
langchain-openai = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
